--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
       href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,700;0,800;0,900;1,800&display=swap"
       rel="stylesheet"
     />
+
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <!-- font awesome -->
     <link
       rel="stylesheet"
